# lab-project

./: .coverage  .coveragerc  .gitignore  .travis.yml  Makefile  Procfile  README.md  alembic.ini  config.ini  docker-compose.yml  gunicorn.conf.py  manage.py  requirements.txt  run.py  setup.py
department_app/: .env  __init__.py  app.py  config.py  dev.env  logger.py  manage.py  pyproject.toml  requirements.txt  test.db
department_app/backend/: models.py  service.py  urls.py
department_app/backend/migrations/: 0001_initial.py  (+1 more)
department_app/database/: database.py  models.py
department_app/db/: __init__.py  database.py
department_app/department_app/: config.py  settings.py  urls.py  wsgi.py
department_app/domain/: data_types.py  exceptions.py  helpers.py  interfaces.py  schemas.py  types.py
department_app/models/: __init__.py  department.py  employee.py  models.py
department_app/rest/: __init__.py  department_api.py  employee_api.py
department_app/service/: __init__.py  service.py  utils.py
department_app/static/: disableButtons.js  sortTable.js  style.css
department_app/templates/: add_department.html  add_employee.html  departments.html  edit_department.html  edit_employee.html  employees.html  layout.html
department_app/tests/: __init__.py  test_department_rest.py  test_department_views.py  test_employee_rest.py  test_employee_views.py  test_rest.py  test_service.py
department_app/views/: __init__.py  department_views.py  departments_api.py  employees_api.py  employees_views.py  error_handlers.py  helpers.py  resource.py
etc/: Dockerfile
(+99 files in other folders)
