[tool.poetry]
name = "department_app"
version = "1.0.1"
description = "project to practice tools"
authors = ["ljte <ljte823@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.25.1"
Django = "3.1.7"
pydantic = "1.8.1"
psycopg2 = "2.8.6"
gunicorn = "20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"